EPSON Stylus Photo 810/820
EPSON Stylus Photo 825/830
EPSON Stylus Photo 870/875
EPSON Stylus Photo 890/895
EPSON Stylus Photo 900
EPSON Stylus Photo 915
EPSON Stylus Photo 925
EPSON Stylus Photo 935
EPSON Stylus Photo 950
EPSON Stylus Photo 960
EPSON Stylus Photo 1200
EPSON Stylus Photo 1270
EPSON Stylus Photo 1280/1290
EPSON Stylus Photo 2000P
EPSON Stylus Photo 2100
EPSON Stylus Photo 2200
EPSON Stylus Photo R300   (Experimental)
EPSON Stylus Photo RX500   (Experimental)
EPSON Stylus Photo R800   (Experimental, CMYK only)
EPSON Stylus Pro 5000
EPSON Stylus Pro 5500
EPSON Stylus Pro 7000
EPSON Stylus Pro 7500
EPSON Stylus Pro 7600
EPSON Stylus Pro 9000
EPSON Stylus Pro 9500
EPSON Stylus Pro 9600
EPSON Stylus Pro 10000
EPSON Stylus Scan 2000
EPSON Stylus Scan 2500
EPSON Stylus CX-3100
EPSON Stylus CX-3200
EPSON Stylus CX-5100
EPSON Stylus CX-5200
EPSON Stylus CX-5300
EPSON Stylus CX-5400
EPSON Stylus CX-6300
EPSON Stylus CX-6400
EPSON Stylus CX-8300
EPSON Stylus CX-8400
EPSON CL-700
EPSON CL-750
EPSON CL-760	(Experimental)
EPSON EM-900C
EPSON EM-930C
EPSON MC-2000
EPSON MC-5000
EPSON MC-7000
EPSON MC-9000
EPSON MC-10000
EPSON MJ-930C
EPSON MJ-5100C
EPSON MJ-6000C
EPSON MJ-8000C
EPSON PM-700C
EPSON PM-G700   (Experimental)
EPSON PM-730C
EPSON PM-740C	(Experimental)
EPSON PM-750C
EPSON PM-D750
EPSON PM-760C
EPSON PM-770C
EPSON PM-780C
EPSON PM-790PT
EPSON PM-800C
EPSON PM-G800   (Experimental)
EPSON PM-850PT
EPSON PM-870C	(Experimental)
EPSON PM-880C
EPSON PM-930C	(Experimental)
EPSON PM-940C	(Experimental)
EPSON PM-950C
EPSON PM-970C	(Experimental)
EPSON PM-980C	(Experimental)
EPSON PM-2000C
EPSON PM-2200C
EPSON PM-3000C
EPSON PM-3300C
EPSON PM-3500C
EPSON PM-3700C	(Experimental)
EPSON PM-4000PX
EPSON PM-5000C
EPSON PM-7000C
EPSON PM-9000C
EPSON PM-10000
EPSON PX-V500
EPSON PX-7000
EPSON PX-9000
FUJIFILM CX-400 (Experimental)
HP DeskJet 340
HP DeskJet 400
HP DeskJet 500
HP DeskJet 500C
HP DeskJet 520
HP DeskJet 540C
HP DeskJet 550C
HP DeskJet 560C