@@ -4,7 +4,7 @@
    XML description of printers known to libgimpprint
    This file was originally generated.  It should be edited by hand.
 
-   "$Id: printers.xml,v 1.93 2004/02/10 01:10:31 rlk Exp $"
+   "$Id: printers.xml,v 1.94 2004/02/22 17:10:49 rlk Exp $"
 -->
 
 <gimp-print xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
@@ -692,6 +692,12 @@
         <gamma value="0.731"/>
         <density value="1.0"/>
       </printer>
+      <printer name="EPSON Stylus Photo R200" driver="escp2-r200" manufacturer="EPSON">
+        <color value="true"/>
+        <model value="63"/>
+        <gamma value="0.731"/>
+        <density value="1.0"/>
+      </printer>
       <printer name="EPSON Stylus Photo R300" driver="escp2-r300" manufacturer="EPSON">
         <color value="true"/>
         <model value="63"/>
@@ -699,6 +705,12 @@
         <density value="1.0"/>
       </printer>
       <printer name="EPSON Stylus Photo RX500" driver="escp2-rx500" manufacturer="EPSON">
+        <color value="true"/>
+        <model value="63"/>
+        <gamma value="0.731"/>
+        <density value="1.0"/>
+      </printer>
+      <printer name="EPSON Stylus Photo RX600" driver="escp2-rx600" manufacturer="EPSON">
         <color value="true"/>
         <model value="63"/>
         <gamma value="0.731"/>
