@@ -777,8 +777,10 @@ EPSON Stylus Photo 1280/1290
 EPSON Stylus Photo 2000P
 EPSON Stylus Photo 2100
 EPSON Stylus Photo 2200
+EPSON Stylus Photo R200   (Experimental)
 EPSON Stylus Photo R300   (Experimental)
-EPSON Stylus Photo RX500   (Experimental)
+EPSON Stylus Photo RX500  (Experimental)
+EPSON Stylus Photo RX600  (Experimental)
 EPSON Stylus Photo R800   (Experimental, CMYK only)
 EPSON Stylus Pro 5000
 EPSON Stylus Pro 5500
@@ -1100,8 +1102,10 @@ Epson Stylus Photo 2100        escp2-2100      EPSON Stylus Photo 2100
 Epson Stylus Photo 2200        escp2-2200      EPSON Stylus Photo 2200
 Epson Stylus Photo EX          escp2-ex        EPSON Stylus Photo EX
 Epson Stylus Photo EX3         escp2-ex3       EPSON Stylus Photo EX3
+Epson Stylus Photo R200        escp2-r200      EPSON Stylus Photo R200
 Epson Stylus Photo R300        escp2-r300      EPSON Stylus Photo R300
 Epson Stylus Photo RX500       escp2-rx500     EPSON Stylus Photo RX500
+Epson Stylus Photo RX600       escp2-rx600     EPSON Stylus Photo RX600
 Epson Stylus Photo R800        escp2-r800      EPSON Stylus Photo R800
 Epson Stylus Pro 5000          escp2-5000      EPSON Stylus Pro 5000
 Epson Stylus Pro 5500          escp2-5500      EPSON Stylus Pro 5500
